[metadata]
name = one_pass_fitting
author = Varun Bajaj
author_email = vbajaj@stsci.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = Point Spread Function fitting and catalog utilities in python, as seen in HST1Pass
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astropy

[options]
zip_safe = False
packages = find:
# python_requires = >=3.9
setup_requires = setuptools_scm


# [options.entry_points]
# console_scripts =
#     astropy-package-template-example = packagename.example_mod:main

[options.package_data]
one_pass_fitting = data/*

[tool:pytest]
testpaths = "one_pass_fitting" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    one_pass_fitting/_astropy_init*
    one_pass_fitting/conftest.py
    one_pass_fitting/*setup_package*
    one_pass_fitting/tests/*
    one_pass_fitting/*/tests/*
    one_pass_fitting/extern/*
    one_pass_fitting/version*
    */one_pass_fitting/_astropy_init*
    */one_pass_fitting/conftest.py
    */one_pass_fitting/*setup_package*
    */one_pass_fitting/tests/*
    */one_pass_fitting/*/tests/*
    */one_pass_fitting/extern/*
    */one_pass_fitting/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
